2009-01-14  Timothee Lecomte  <timothee.lecomte@lpa.ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_image):
	* src/wxterminal/gp_cairo.h:
	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (wxt_image):
	* term/cairo.trm (cairotrm_image):
	Change gp_cairo_draw_image prototype so that the conversion from
	gnuplot	internal image format to a unsigned int* is completely done
	outside	gp_cairo.c. Modify callers in cairo-based terminals
	accordingly. This is still preliminary work towards wxt-for-MacOSX.

2009-01-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Change the status bar of a non-active
	or persistent window only for almost2d plot.

	* src/gplt_x11.c (exec_cmd): Add field almost2d to plot_struct and set
	it according to sent ALMOST2D.

	* term/x11.trm (X11_text): Send information about ALMOST2D.

	* src/gadgets.h src/mouse.c: Move definition of macro ALMOST2D to
	gadgets.h.

2009-01-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.js:
	Mousing code for standalone plots created by the canvas driver.
	Embedded plots are mouseable also, but the user must provide the
	appropriate document to wrap the embedded plots and link them to
	the mousing code.

2009-01-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Option to run gdlib-config to determine libraries
	for linking of gd. Fix link where to download hcw.

2009-01-13  Timothee Lecomte  <timothee.lecomte@lpa.ens.fr>

	* src/Makefile.am src/wxterminal/gp_cairo.c 
	(gp_cairo_draw_image) src/wxterminal/gp_cairo_helpers.c 
	src/wxterminal/gp_cairo_helpers.h src/wxterminal/Makefile.am:

	Introduce a new source file, named gp_cairo_helpers.c, to
	contain gp_cairo_* code that uses functions from gnuplot core.
	Currently this is a small portion of code to convert a
	coordval* to a char* buffer. This will be helpful for
	wxt-as-a-separate-process where I need to separate clearly the