@@ -8,10 +8,6 @@
 /* Define to allow use of deprecated syntax and terminal behaviour. */
 #define BACKWARDS_COMPATIBLE 1
 
-/* Define if you want the x11 driver to transfer polygon information in binary
-   format. */
-/* #undef BINARY_X11_POLYGON */
-
 /* Define if you want to use the CGI terminal under SCO. */
 /* #undef CGI */
 
