@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.225 2008/12/17 20:45:52 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.226 2009/01/15 04:55:50 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -930,9 +930,7 @@ show_version(FILE *fp)
 #ifdef X11
 		"+X11  "
 #endif
-#ifdef BINARY_X11_POLYGON
 		"+X11_POLYGON  "
-#endif
 #ifdef USE_X11_MULTIBYTE
 		"+MULTIBYTE  "
 #endif
